language/move-lang/tests/move_check/naming/unbound_module.exp
error: 

   ┌── tests/move_check/naming/unbound_module.move:4:9 ───
   │
 4 │         X::foo();
   │         ^^^^^^ Unbound module '0x0::X'
   │

